--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,30 @@
 .hidden {
   display: none;
 }
+
+.jumbotron-custom {
+  border: 4px solid rgb(155, 225, 225);
+  margin: 20px;
+  padding: 10px;
+  background-color:rgb(236, 236, 193);
+  float: none;
+}
+
+body {
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: rgb(224, 238, 250);
+  float: left;
+}
+
+img {
+  padding: 4px;
+  border: 4px ridge rgb(173, 200, 224); 
+  align-items: center;
+  background-color: rgb(224, 238, 250);
+}
+
+.blue-theme {
+  background-color: rgb(155, 192, 224);
+  border: 2px rgb(224,238,250);
+}
